<resources>
    <string name="app_name">BosTokennetWallet</string>
    <string name="transaction_his">Payments</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="address">Address</string>
    <string name="his_all">All</string>
    <string name="his_receive">Receive</string>
    <string name="his_send">Send</string>
    <string name="toast_text_clipboard_address">Address Copyed.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="create_account">Create Account</string>
    <string name="create_account2">Create Account 2</string>
    <string name="reg_account">Regist Account</string>
    <string name="account_balance">Account Balance</string>
    <string name="account_balance2">Account Balance 2</string>
    <string name="payments">Payments</string>
    <string name="confirm_payments_his">Confirm Payments History</string>
    <string name="receives">Receive</string>
    <string name="toolbar_activity">Activity with Toolbar</string>
    <string name="make_address">Address</string>
    <string name="make_qr">Make QR</string>
    <string name="setting">Setting</string>
    <string name="setting_wallets">Setting_Wallets</string>
    <string name="create_wallets">Create Wallets</string>
    <string name="install_wallets">Install Wallets</string>
    <string name="change_wallets">Change Order Wallets</string>
    <string name="change_lang">Change Language</string>
    <string name="show_tips">Show Tips</string>
    <string name="setting_lang">Setting Language</string>
    <string name="english">English</string>
    <string name="korea">Korean</string>
    <string name="import_seed">Import Seed Key</string>
    <string name="import_secure">Import Secure Key</string>
    <string name="recover">Recover</string>
    <string name="input_used_pw">Used Password</string>
    <string name="done">Done</string>
    <string name="slan">Language</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="import_wallet">Import Wallet</string>
    <string name="input_wallet_name">Input Wallet Name</string>
    <string name="input_new_pw">Input New PassWord</string>
    <string name="confirm_new_pw">Confirm New Password</string>
    <string name="ok">OK</string>
    <string name="qr_c">QR Code</string>
    <string name="input_already_pw">Input Already PassWord</string>
    <string name="confirm_already_pw">Confirm Already Password</string>
    <string name="input_pub_key">Input Public Address</string>
    <string name="send_fee">Fee</string>
    <string name="ammount">Ammount</string>
    <string name="my_wallet">My Wallet</string>
    <string name="change_wallet_order">Change Wallet Order</string>
    <string name="add">Add</string>
    <string name="history">History</string>
    <string name="request_amount">(Option) Request a specific amount</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="req_amount">Request Amount</string>
    <string name="bos_tk">BOScoin Tokennet</string>
    <string name="wallet">Wallet</string>
    <string name="bos_p_f">BOS Platform Foundation</string>
    <string name="wellcome_t">Welcome to</string>
    <string name="bos_tk_w">BOScoin Tokennet Wallet</string>
    <string name="let_start">Let\'s start with the notes before</string>
    <string name="using_yw">using your wallet.</string>
    <string name="users_using">Users using this wallet are deemed to have</string>
    <string name="agree_all_precautions">agreed to all precautions.</string>
    <string name="dont_show">Don\'t show again</string>
    <string name="next">Next</string>
    <string name="ca_do_not_lose">Do not lose or share your secret seed,\nrecovery key, or password.</string>
    <string name="ca_sec_seed">Secret seed, recovery key, and password can\nnot be found again. Please manage it\nthoroughly.</string>
    <string name="please_quit">Please quit the app immediately\nafter use.</string>
    <string name="someone_can">Someone can always steal your secret seed.</string>
    <string name="no_see_page">Do you want to see this page again?</string>
    <string name="please_check">Please check the following notes.</string>
    <string name="min_balance">A minimum balance is required to create a valid\naccount. Please send a minimum balance of\n0.1BOS after setting the password.</string>
    <string name="wallet_name">Wallet names and information in your contacts\nwill all disappear when the app is removed or\nyour wallet is imported.</string>
    <string name="your_pw">Your password is required to send BOS, check\nyour secret seed, and import your wallet.\nRemember, you cannot find your password\nif you lose it.</string>
    <string name="secret_seed">Secret seed and recovery key are required when\nimporting wallets. Do not lose it or share it with\nothers.</string>
    <string name="enter_wname">Enter Wallet Name</string>
    <string name="enter_pw">Enter Password</string>
    <string name="confirm_pw">Confirm Password</string>
    <string name="your_pw_is">Your password is required to send BOS, check your secret seed</string>
    <string name="and_import">and import your wallet. Remember,</string>
    <string name="you_cannot_find">you cannot find your password if you lose it.</string>
    <string name="rember_recover">Remember the recovery key show\non the next screen so you can\nrecover your wallet again.</string>
    <string name="title_setup">Password setup is complete.</string>
    <string name="double_check">Double-check that you have kept a recovery key that you can\nsee now.
        The recovery key and secret seed can be found on\nthe Settings screen of the individual wallet.</string>
    <string name="check_reckey">Check Recovery Key.</string>
    <string name="enter_skey">Enter Secret Seed</string>
    <string name="enter_rkey">Enter Recovery Key</string>
    <string name="p_enter_your">Please enter your secret seed or recovery key.</string>
    <string name="wallet_restore">Your wallet has been restored.</string>
    <string name="y_pass_is">Your password is required to send money,\ncheck your secret seed and import your wallet.\nEach wallet must set a password.</string>
    <string name="t_new_pw">Set a new password</string>
    <string name="s_precautions">Precautions</string>
    <string name="pub_address">Public Address</string>
    <string name="inform_you">The information you register now will disappear once the app is\n
removed or reinstalled, and you can only register up to 100 contacts.</string>
    <string name="enter_name">Enter a name</string>
    <string name="enter_pub_address">Enter a public address</string>
    <string name="edit_no">Can’t edit</string>
    <string name="send_total">Total Amount</string>
    <string name="new_pw2">New Password</string>
    <string name="sec_key_noti">The secret seed starts with \'S\' and is a total of 56 characters.\n
Keep your Secret Seed in a safe place.</string>
    <string name="rc_key_noti">The secret seed starts with \'B\' and is a total of 56 characters.\n
Keep your Secret Seed in a safe place.</string>
    <string name="delete_w">Are you sure you want to deletethis wallet?</string>
    <string name="if_you_delete">If you delete your wallet without\nbacking it up, you will not be able to\nrestore your wallet!</string>
    <string name="d_date">Date</string>
    <string name="d_type">Type</string>
    <string name="d_from">From</string>
    <string name="d_to">To</string>
    <string name="d_amount">Amount</string>
    <string name="min_bal">You must have a minimum balance (0.1BOS)\nto make the created account a valid account.\n
        Get a minimum balance of 0.1BOS\nat the public address above.</string>
    <string name="receive_bos">Receive 0.1 BOS</string>
    <string name="restore">Your wallet has been restored.</string>
    <string name="error_no_name">Please Input Wallnet Name</string>
    <string name="error_no_pw">Please Input Wallnet PassWord</string>
    <string name="error_match_pw">Different PassWord</string>
    <string name="error_create_wallet">Please ReTry</string>
    <string name="error_no_key">We needs recover key.</string>
    <string name="error_decode_seed_key">Invalid Seed key.</string>
    <string name="error_decode_bos_key">Invalid Bos key.</string>
    <string name="error_two_key">Please Only One Key</string>
    <string name="title_activity_wallet_order">WalletOrderActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="error_amount">The decimal point can only be entered to the 7th digit</string>
    <string name="error_all_check">Please check all notice.</string>
    <string name="error_already">The name is already taken</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_contact">Contacts</string>
    <string name="no_contact">You have no contacts in your address book.</string>
    <string name="add_contact">Add contacts</string>
    <string name="add_cname">Name</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_send">Send</string>
    <string name="menu_delete">Delete</string>
    <string name="delete_title">Are you sure you want to delete it?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="fee">Fee 0.001 BOS</string>
    <string name="send_detail">Remittance details</string>
    <string name="dlog_public">Public </string>
    <string name="dlog_address">Address </string>
    <string name="dlog_pw">Enter a password </string>
    <string name="dlog_send_ok">Transfer completed </string>
    <string name="change_wallet_name">Change Wallet Name</string>
    <string name="change_wallet_pw">Change Password</string>
    <string name="check_seed">Check secret seed</string>
    <string name="delete_wallet">Delete Wallet</string>
    <string name="info_endit">The information you edit now will be lost when you remove the app
or import your wallet.</string>
    <string name="check_rckey">Check Recovery Key</string>
    <string name="cur_wname">Current Wallet Name</string>
    <string name="new_wname">New Wallet Name</string>
    <string name="cur_pw">Current Password</string>
    <string name="noti_pw">If you change the password, the existing recovery key will be lost.
The new recovery key can be checked in the settings.</string>
    <string name="new_pw">Enter New Password</string>
    <string name="conf_pw">Confirm New Password</string>
    <string name="screen_cap">Screen capture is prohibited for security
reasons. To restore your wallet, you need to
know your secret seed or recovery key.</string>
    <string name="be_care">Be careful not to lose them or be exposed to others.</string>
    <string name="ck_seed">Check Secret Seed</string>
    <string name="ck_rckey">Check Recovery Key</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="create_ac">Create Account</string>
    <string name="detail">Detail</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_wname_length">Wallet name can be up to 10.</string>
    <string name="error_fail_send">Fail to Send.</string>
    <string name="error_fail_send_msg">Send was Fail\nPlease try again later.</string>
</resources>