<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="2">

        <TextView
            android:id="@+id/tv_wname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_gravity="center_horizontal"
            android:text=""/>

        <TextView
            android:id="@+id/tv_balances"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="0 BOS"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/text_margin">

            <TextView
                android:id="@+id/tv_pub_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btn_his_all"
                android:layout_centerHorizontal="true"
                android:text="Gxx" />

            <Button
                android:id="@+id/btn_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="copy"
                android:onClick="addressCopy"/>

            <Button
                android:id="@+id/btn_his_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/his_all"
                android:onClick="viewHistoryAll"/>

            <Button
                android:id="@+id/btn_his_receive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/btn_his_all"
                android:text="@string/his_receive"
                android:onClick="viewReceiveHistory"/>

            <Button
                android:id="@+id/btn_his_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/btn_his_receive"
                android:text="@string/his_send"
                android:onClick="viewSendHistory"/>

        </RelativeLayout>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/frag_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_his"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/transaction_his"
            android:onClick="goHistoryView"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/send"
            android:onClick="goSendView"/>

        <Button
            android:id="@+id/btn_receive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/receive"
            android:onClick="goReceiveView"/>

        <Button
            android:id="@+id/btn_address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/address"
            android:onClick="goAddressView"/>
    </LinearLayout>
</LinearLayout>
